// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render + wrap non Flex children 1`] = `
<div
  class="wp-components-flex css-1okn762"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="css-1xlcbup"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="css-j1yu9m"
  />
  <div />
  <div
    class="css-1g8hj12"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render align 1`] = `
<div
  class="wp-components-flex css-1d0g5wo"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="css-1xlcbup"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="css-1g8hj12"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex css-1okn762"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="css-1xlcbup"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="css-1g8hj12"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-flex css-10rx5n9"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="css-1xlcbup"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="css-1g8hj12"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-flex css-1okn762"
  data-g2-c16t="true"
  data-g2-component="Flex"
  spacing="5"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;
